--- a/l10n_es_aeat_sii/views/account_invoice_view.xml
+++ b/l10n_es_aeat_sii/views/account_invoice_view.xml
@@ -9,7 +9,11 @@
 			<field name="arch" type="xml">
 				<notebook position="inside">
 					<page string="AEAT" groups="account.group_account_manager">
-						<group string="SII">
+					    <group string="SII Information">
+					        <field name="refund_type" 
+					        attrs="{'required': [('type', 'in', ('out_refund','in_refund'))]}"/>
+					    </group>
+						<group string="SII Result">
 							<field name="sii_sent" />
 							<field name="sii_return" />
 						</group>
@@ -25,7 +29,11 @@
 			<field name="arch" type="xml">
 				<notebook position="inside">
 					<page string="AEAT" groups="account.group_account_manager">
-						<group string="SII">
+                        <group string="SII Information">
+                            <field name="refund_type" 
+                            attrs="{'required': [('type', 'in', ('out_refund','in_refund'))]}"/>
+                        </group>
+						<group string="SII Result">
 							<field name="sii_sent" />
 							<field name="sii_return" />
 						</group>
