--- a/l10n_es_aeat_sii/views/aeat_sii_view.xml
+++ b/l10n_es_aeat_sii/views/aeat_sii_view.xml
@@ -18,6 +18,7 @@
                             <field name="folder"/>
                         </group>
                         <group>
+                            <field name="company_id"/>
                             <field name="date_start"/>
                             <field name="date_end"/>
                         </group>
