--- a/l10n_es_aeat_sii/views/account_invoice_view.xml
+++ b/l10n_es_aeat_sii/views/account_invoice_view.xml
@@ -95,5 +95,17 @@
 			</field>
 		</record>
 
+        <record id="view_account_invoice_sii_filter" model="ir.ui.view">
+            <field name="name">account.invoice.select.sii</field>
+            <field name="model">account.invoice</field>
+            <field name="inherit_id" ref="account.view_account_invoice_filter" />
+            <field name="arch" type="xml">
+                <filter name="unpaid" position="after">
+                    <filter name="sii_not_sent" string="SII not send" domain="[('sii_sent','=',False)]"/>
+                    <filter name="sii_sent" string="SII send" domain="[('sii_sent','=',True)]"/>
+                </filter>
+            </field>
+        </record>
+
 	</data>
 </openerp>
