--- a/l10n_es_aeat_mod340/report/report_paper_format.xml
+++ b/l10n_es_aeat_mod340/report/report_paper_format.xml
@@ -8,7 +8,7 @@
       	    <field name="format">custom</field>
       	    <field name="page_height">298</field>
       	    <field name="page_width">210</field>
-      	    <field name="orientation">Portrait</field>
+      	    <field name="orientation">Landscape</field>
       	    <field name="margin_top">10</field>
       	    <field name="margin_bottom">10</field>
       	    <field name="margin_left">10</field>
